# sweetly

./: README.md  pyproject.toml
sweetly/: __init__.py  __main__.py  _api.py  _types.py  constants.py
sweetly/structs/: graph.py  tokens.py
sweetly/util/: __init__.py
