[tool.poetry]
name = "sweetly"
version = "0.1.0"
description = "Extract Transform Load for Python 3.10+"
authors = ["Jonathan Crum <crumja4@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mondrian = "^0.8.1"
sorcery = "^0.2.2"
beartype = "^0.11.0"
rich = "^12.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
